--- a/.github/workflows/code-linter.yml
+++ b/.github/workflows/code-linter.yml
@@ -2,11 +2,8 @@ name: Java File Lint
 
 on:
   push:
-    paths:
-      - '**.java'
-  pull_request:
-    paths:
-      - '**.java'
+    branches:
+    - main
     
 jobs:
   lint:
